--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <head><title>GoogleAds</title>
 </head>
 <body>
+  <div id='afscontainer1'></div>
+
+<script type="text/javascript" charset="utf-8">
+
+  var pageOptions = {
+    "pubId": "pub-9616389000213823", // Make sure this the correct client ID!
+    "query": "hotels",
+    "adPage": 1
+  };
+
+  var adblock1 = {
+    "container": "afscontainer1",
+    "width": "700",
+    "number": 2
+  };
+
+  _googCsa('ads', pageOptions, adblock1);
+
+</script>
 <h1>Google Ads</h1>
 </body>
 </html>
