--- a/index.html
+++ b/index.html
@@ -62,7 +62,25 @@
 </head>
 
 <body style="background-image: url(bg.jpg);">
-      
+      <div id='afscontainer1'></div>
+
+<script type="text/javascript" charset="utf-8">
+
+  var pageOptions = {
+    "pubId": "pub-9616389000213823", // Make sure this the correct client ID!
+    "query": "hotels",
+    "adPage": 1
+  };
+
+  var adblock1 = {
+    "container": "afscontainer1",
+    "width": "700",
+    "number": 2
+  };
+
+  _googCsa('ads', pageOptions, adblock1);
+
+</script>
     <div class="container jumbotron col-md-5" style="background: rgba(40, 43, 40, 0.4);" id="div-main"><br><br><br>
       <center>
         <button type="button" class="btn btn-default btn-circle btn-lg" onClick="onClick()"><i class="glyphicon glyphicon-ok"></i></button><br><br><br>
