--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     function onClick() {
         clicks += 1;
         document.getElementById("clicks").innerHTML = clicks;
-        if(clicks % 5==0 || clicks % 10 == 0)
+        if(clicks % 5==0)
         {
           (adsbygoogle = window.adsbygoogle || []).push({
             google_ad_client: "ca-pub-5091444114550563",
